--- a/conocimiento.html
+++ b/conocimiento.html
@@ -69,7 +69,7 @@
     </th>
     </tr>
     <tr><th>
-        <img class="imagen"src="img/comunicacion-02.jpg" alt="">  
+        <img class="imagen"src="img/ingenieria.jpg" alt="">  
     </th>
     <th>
         <img class="imagen"src="img/panel.png" alt="">  
