--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
             </th>
             </tr>
             <tr><th>
-                <img class="imagen"src="img/comunicacion-02.jpg" alt="">  
+                <img class="imagen"src="img/comuni.jpg" alt="">  
             </th>
             <th>
-                <img class="imagen"src="img/Comunicacion.jpg" alt="">  
+                <img class="imagen"src="img/red.jpg" alt="">  
             </th>
             </tr>
         </table>
